<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_v"
    tools:context=".main.MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textColor="#8B0000"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="#8B0000"
            android:textSize="15dp"
            android:text="@string/description_app_name"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_weight="6"
        android:orientation="vertical">

        <Button
            android:id="@+id/map_mode_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/chocolate"
            android:onClick="goToMap"
            android:text="@string/map_mode"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/list_mode_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chocolate"
            android:onClick="goToList"
            android:text="@string/list_mode"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/forum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chocolate"
            android:onClick="goToChat"
            android:text="@string/forum"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/main_sound"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/chocolate"
        android:onClick="turnSound"
        android:src="@drawable/ic_music_off" />

</RelativeLayout>